--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 <body>
     <h1>Лабораторная работа №5</h1>
     <p>Это моя первая HTML-страница, созданная в рамках изучения основ веб-разработки </p>
+    
 </body>
 </html>
+
+<hr>
+<p>Абзац текста</p>
+<img src="https://google.com" alt="">
+<h1>Пример парного тега</h1>
