Added basic HTML tags section

--- a/index.html
+++ b/index.html
@@ -16,3 +16,18 @@
 <p>Абзац текста</p>
 <img src="https://google.com" alt="">
 <h1>Пример парного тега</h1>
+
+<h2>Это подзаголовок</h2>
+<h3>Подраздел</h3>
+<p>Это обычный абзац текста</p>
+<p>Это<strong>очень важная</strong>фраза.</p>
+<p>Это<em>курсивный</em>текст.</p>
+<p>Линия 1<br>Линия 2</p>
+<p><a href="https://google.com">Перейти на гугл</a></p>
+<p><img src="ex.png" alt="Картинка не загрузилась" /></p>
+
+<h2>Основные HTML-теги</h2>
+<p>С помощью HTML можно <strong>выделять</strong> текст и расставлять <em>смысловые акценты</em>.</p>
+<br />
+<p><a href="https://github.com/K1eranza">Перейти в мой GitHub</a></p>
+<p><img src="img/gitPushLab5.png" alt="Пример изображения"></p>
