--- a/index.html
+++ b/index.html
@@ -31,3 +31,44 @@
 <br />
 <p><a href="https://github.com/K1eranza">Перейти в мой GitHub</a></p>
 <p><img src="img/gitPushLab5.png" alt="Пример изображения"></p>
+
+<ol>
+    <li>Первый пункт</li>
+    <li>Второй пункт</li>
+    <li>Третий пункт</li>
+</ol>
+
+<ul>
+    <li>Элемент списка</li>
+    <li>Еще один элемент</li>
+</ul>
+
+<ul>
+    <li> Пункт 1
+        <ol>
+            <li>Вложенный 1</li>
+            <li>Вложенный 2</li>
+        </ol>
+    </li>
+</ul>
+
+<h2>Задание</h2>
+
+<li> Синистер </li>
+<li> Люди в черном </li>
+<li> Шрек </li>
+
+<ul> Хобби:
+    <li>Комп. игры</li>
+    <li>Программирование</li>
+</ul>
+
+<ul>
+    <li> Списки:
+        <ol>
+            <li>Вложенный список 1</li>
+            <li>Вложенный список 2</li>
+        </ol>
+    </li>
+</ul>
+
